--- a/thesis/pacBio/pacBio.tex
+++ b/thesis/pacBio/pacBio.tex
@@ -5,12 +5,12 @@
 \chapter{Dynamic regulation of HIV-1 mRNA populations analyzed by single-molecule enrichment and long-read sequencing}
 
 \section{Abstract}
-Alternative RNA splicing greatly expands the repertoire of proteins encoded by genomes. Next-generation sequencing (NGS) is attractive for studying alternative splicing because of the efficiency and low cost per base, but short reads typical of NGS only report mRNA fragments containing one or few splice junctions. Here, we used single-molecule amplification and long-read sequencing to study the HIV-1 provirus, which is only 9700 bp in length, but encodes nine major proteins via alternative splicing. Our data showed that the clinical isolate \hivEight{} produces at least 109 different spliced RNAs, including a previously unappreciated \approximately{}1 kb class of messages, two of which encode new proteins. HIV-1 message populations differed between cell types, longitudinally during infection, and among T cells from different human donors. These findings open a new window on a little studied aspect of HIV-1 replication, suggest therapeutic opportunities and provide advanced tools for the study of alternative splicing. 
+Alternative RNA splicing greatly expands the repertoire of proteins encoded by genomes. Next-generation sequencing (NGS) is attractive for studying alternative splicing because of the efficiency and low cost per base, but short reads typical of NGS only report mRNA fragments containing one or few splice junctions. Here, we used single-molecule amplification and long-read sequencing to study the HIV-1 provirus, which is only 9700 bp in length, but encodes nine major proteins via alternative splicing. Our data showed that the clinical isolate \hivEight{} produces at least 109 different spliced RNAs, including a previously unappreciated $\approximately{}1$ kb class of messages, two of which encode new proteins. HIV-1 message populations differed between cell types, longitudinally during infection, and among T cells from different human donors. These findings open a new window on a little studied aspect of HIV-1 replication, suggest therapeutic opportunities and provide advanced tools for the study of alternative splicing. 
 
 \section{Introduction}
-Alternative splicing greatly expands the information content of genomes by producing multiple mRNAs from individual transcription units. Approximately 95\% of human genes with multiple exons encode RNA transcripts that are alternatively spliced, and mutations that affect alternative splicing are associated with diseases ranging from cystic fibrosis to chronic lymphoproliferative leukemia (1-5). Work to decipher an RNA `splicing code' has revealed that multiple interactions between trans-acting factors and RNA elements determine splicing patterns, though regulation is little understood for most genes (6).
+Alternative splicing greatly expands the information content of genomes by producing multiple mRNAs from individual transcription units. Approximately 95\% of human genes with multiple exons encode RNA transcripts that are alternatively spliced, and mutations that affect alternative splicing are associated with diseases ranging from cystic fibrosis to chronic lymphoproliferative leukemia (1,2,3,4,5). Work to decipher an RNA `splicing code' has revealed that multiple interactions between trans-acting factors and RNA elements determine splicing patterns, though regulation is little understood for most genes (6).
 
-The integrated HIV-1 provirus is \approximately{}9700 bp in length and has a single transcription start site, but according to the published literature yields at least 47 different mRNAs encoding 9 proteins or polyproteins, making HIV an attractive model for studies of alternative splicing (7). HIV mRNAs fall into three classes: the unspliced RNA genome, which encodes Gag/Gag-Pol; partially spliced transcripts, \approximately{}4 kb in length, encoding Vif, Vpr, a one-exon version of Tat, and Env/Vpu; and completely spliced mRNAs of roughly 2 kb encoding Tat, Rev and Nef (Figure 1A). Additional rare `cryptic' splice donors (\fivePrime{} splice sites) and acceptors (\threePrime{} splice sites) contribute even more mRNAs (8-13). A complex array of positive and negative cis-acting elements surrounding each splice site regulates the relative abundance of the HIV-1 mRNAs, and disrupting the balance of message ratios impairs viral replication in several models (14-21). Studies have suggested strain-specific splicing patterns may exist (7,22,23). However, detailed studies of complete message populations have not been reported for clinical isolates of HIV-1. 
+The integrated HIV-1 provirus is $\approximately{}9700$ bp in length and has a single transcription start site, but according to the published literature yields at least 47 different mRNAs encoding 9 proteins or polyproteins, making HIV an attractive model for studies of alternative splicing (7). HIV mRNAs fall into three classes: the unspliced RNA genome, which encodes Gag/Gag-Pol; partially spliced transcripts, $\approximately{}4$ kb in length, encoding Vif, Vpr, a one-exon version of Tat, and Env/Vpu; and completely spliced mRNAs of roughly 2 kb encoding Tat, Rev and Nef (Figure 1A). Additional rare `cryptic' splice donors (\fivePrime{} splice sites) and acceptors (\threePrime{} splice sites) contribute even more mRNAs (8,9,10,11,12,13). A complex array of positive and negative cis-acting elements surrounding each splice site regulates the relative abundance of the HIV-1 mRNAs, and disrupting the balance of message ratios impairs viral replication in several models (14,15,16,17,18,19,20,21). Studies have suggested strain-specific splicing patterns may exist (7,22,23). However, detailed studies of complete message populations have not been reported for clinical isolates of HIV-1. 
 
 Several groups have demonstrated tissue- and differentiation-specific splicing of cellular genes (2,24,25). Importantly for HIV, these include changes during T-cell activation (26,27), raising the question of how cell-specific splicing affects HIV replication. While most studies of HIV-1 splicing have been conducted in cell lines using lab-adapted viral strains, limited works in PBMCs from infected patients, monocytes and macrophages have suggested that differences may indeed exist in relevant cell types (9,22,28,29). Moreover, human splicing patterns differ between individuals, but such polymorphisms have not been investigated in the context of HIV infection (30,31).
 
@@ -45,7 +45,7 @@ Filter-passed reads were aligned against all expected fragments based on primers
 
 Gaps in Blat hits were ignored if $\le 10$ bases long or in regions of likely poor read quality $\le 20$ bases long where an inferred insertion of unmatched bases in the read occurred at the same location as skipped bases in the reference. Any Blat hits with a gap $>10$ nt remaining in the query read were discarded. If HIV sequence was repeated in a given read (likely due to PacBio circular sequencing), the alignments were collapsed into the union of the coverage. Gaps in the HIV sequence found in uninterrupted query sequence were called as tentative introns. Splice junctions were assigned to conserved or previously identified (published or in this work) splice sites and reads appearing to contain donors or acceptors further than 5 nt away from these sites were discarded. Reads with Blat hits outside the expected primer range were discarded from that primer grouping. The assigned primer pair, observed junctions and exonic sequence were used to assign each read to a given spliceform (specific transcript structure) or set of possible spliceforms. Partial sequences that did not extend through both primers were assigned to specific transcripts if the read contained enough information to rule out all other spliceforms or if all other possible spliceforms contained rare ($<1$\% usage) donors or acceptors (Supplementary Table S3). Otherwise, the read was called indeterminate.
 
-To calculate the ratios of transcripts within the partially spliced class, we counted the number of reads for each assigned spliceform amplified by primer pair 1.3 and divided by the total number of assigned partially spliced reads amplified with these primers (Supplementary Figure S1 and Supplementary Table S2). Assigned sequences amplified with primer pairs 1.4 and 4.1 (full-length cDNAs, T cells only) were used to calculate ratios of transcripts within each of the two completely splice classes (\approximately{}2 and \approximately{}1 kb). To compare ratios of \approximately{}2 kb transcripts calculated within reads from primer pairs 1.4 and 4.1, we normalized ratios from pair 4.1 to the nef 2 transcript (containing exons 1, 5 and 7). Due to size biases inherent in the approach, we did not compare across size classes, and unspliced transcripts were not included in ratio analysis. For all ratio analysis, transcripts including cryptic or novel junctions were counted only if they appeared in at least five reads, otherwise they were excluded from the analysis and from the count of total assigned reads.
+To calculate the ratios of transcripts within the partially spliced class, we counted the number of reads for each assigned spliceform amplified by primer pair 1.3 and divided by the total number of assigned partially spliced reads amplified with these primers (Supplementary Figure S1 and Supplementary Table S2). Assigned sequences amplified with primer pairs 1.4 and 4.1 (full-length cDNAs, T cells only) were used to calculate ratios of transcripts within each of the two completely splice classes ($\approximately{}2$ and $\approximately{}1$ kb). To compare ratios of $\approximately{}2$ kb transcripts calculated within reads from primer pairs 1.4 and 4.1, we normalized ratios from pair 4.1 to the nef 2 transcript (containing exons 1, 5 and 7). Due to size biases inherent in the approach, we did not compare across size classes, and unspliced transcripts were not included in ratio analysis. For all ratio analysis, transcripts including cryptic or novel junctions were counted only if they appeared in at least five reads, otherwise they were excluded from the analysis and from the count of total assigned reads.
 
 To estimate the minimum total number of transcripts present, partial sequence reads were included. Each exon-exon junction occurring in at least five reads and not previously assigned to a particular transcript (Figure 2) was counted as evidence of an additional transcript (47 additional junctions were detected, see Supplementary Table S4). If two such junctions could conceivably occur in a single mRNA, we counted only one unless we could verify from sequence reads that they were amplified from separate cDNAs, resulting in 31 additional transcripts. The minimum transcript number calculated by a greedy algorithm treating introns as events in a scheduling problem agreed with the above calculation. 
 
@@ -69,19 +69,19 @@ We aligned PacBio reads containing HIV sequences to the \hivEight{} genome and i
 
 In addition, we identified 13 putative novel splice sites: 2 donors and 11 acceptors (Figure 1 and Supplementary Table S3). In order to be selected as a bona fide splice site and remove artifacts possibly created by recombination during sample preparation, we required that the new acceptor or donor was observed spliced to previously reported splice donors or acceptors in $>10$ sequence reads in \cdFour{} T cells. The most frequently used novel splice site was an acceptor that we have termed A8c because it lies near A8, A8a and A8b (discussed in detail below). Additional novel sites are further discussed in Supplementary Report S1.
 
-Most of the new splice sites adhered to consensus sequences for the standard spliceosome (Supplementary Table S3). However, there appeared to be one splice donor upstream of D1 with a cytidine in place of the usual uracil 2 nt downstream of the splice site. Similar `GC donors' appear in 1\% of known splice junctions in humans (43). Of the novel splice acceptors, three were preceded by dinucleotides other than the consensus AG. Alternative dinucleotides are used infrequently as splice acceptors (44-47); however, it is possible that our deep sequencing method allowed us to observe rare events. 
+Most of the new splice sites adhered to consensus sequences for the standard spliceosome (Supplementary Table S3). However, there appeared to be one splice donor upstream of D1 with a cytidine in place of the usual uracil 2 nt downstream of the splice site. Similar `GC donors' appear in 1\% of known splice junctions in humans (43). Of the novel splice acceptors, three were preceded by dinucleotides other than the consensus AG. Alternative dinucleotides are used infrequently as splice acceptors (44,45,46,47); however, it is possible that our deep sequencing method allowed us to observe rare events. 
 
 
 \subsection{Structures of spliced \hivEight{} RNAs}
 To quantify the populations of HIV-1 transcripts, we aligned all reads to the collection of 47 well-established spliced HIV-1 transcripts and detected 45 of them (Figure 2). We additionally aligned reads to the \hivEight{} genome allowing all possible combinations of splice junctions---canonical, cryptic or novel---determined from the sequencing data (Figure 1), yielding an additional 32 complete transcripts, 19 of which were novel. The data also provide evidence for more novel splice junctions but in incomplete sequences, implying the existence of additional new transcripts (Supplementary Table S4 and Supplementary Report S1). The full data set taken together provides evidence for least 109 different \hivEight{} transcripts in primary T cells.
 
-Amplification primers that isolated the two main classes of spliced messages allowed us to determine the ratios of mRNAs in each (Figure 2 and Supplementary Table S5). Within the partially spliced class of transcripts, env/vpu, tat (1-exon), vpr and vif messages existed in an average ratio of 96:4:$<1$:$<1$ in \cdFour{} T cells. The ratio of nef:rev:tat:vpr within the \approximately{}2 kb transcript class was 64:33:3:$<1$. Consistent with previous reports, the most abundant transcript in each class contained the splice junction from D1 to A5 (D1\^{}A5)---an env/vpu transcript contributing 64\% of the partially spliced class, and a completely spliced nef transcript contributing 47\% of \approximately{}2 kb messages (Figure 2) (7,48). The relatively low abundance of transcripts encoding Tat suggests that Tat sufficiently stimulates HIV transcription elongation at low concentrations, or that the tat transcripts must be efficiently translated. Due to biases inherent in the reverse transcription step, we could only compare transcripts within each size class, and we note that our methods have not been validated for empirical quantification. However, the ratios were roughly confirmed using overlapping sequence reads obtained with alternate primer pairs and by end point RT-PCR analysis of HIV-1 RNAs (data not shown).
+Amplification primers that isolated the two main classes of spliced messages allowed us to determine the ratios of mRNAs in each (Figure 2 and Supplementary Table S5). Within the partially spliced class of transcripts, env/vpu, tat (1-exon), vpr and vif messages existed in an average ratio of 96:4:$<1$:$<1$ in \cdFour{} T cells. The ratio of nef:rev:tat:vpr within the $\approximately{}2$ kb transcript class was 64:33:3:$<1$. Consistent with previous reports, the most abundant transcript in each class contained the splice junction from D1 to A5 (D1\^{}A5)---an env/vpu transcript contributing 64\% of the partially spliced class, and a completely spliced nef transcript contributing 47\% of $\approximately{}2$ kb messages (Figure 2) (7,48). The relatively low abundance of transcripts encoding Tat suggests that Tat sufficiently stimulates HIV transcription elongation at low concentrations, or that the tat transcripts must be efficiently translated. Due to biases inherent in the reverse transcription step, we could only compare transcripts within each size class, and we note that our methods have not been validated for empirical quantification. However, the ratios were roughly confirmed using overlapping sequence reads obtained with alternate primer pairs and by end point RT-PCR analysis of HIV-1 RNAs (data not shown).
 
-Exons 2 and 3 are non-coding exons whose inclusion in transcripts other than vif and vpr has no known function. We found that they were included in other messages infrequently, each in \approximately{}7--8\% of transcripts in the \approximately{}2 kb completely spliced class of transcripts and 5\% of partially spliced transcripts accumulating in T cells. This is consistent with previous measurements in the partially spliced class but much lower than has been estimated for completely spliced transcripts in HeLa cells, suggesting cell-type-specific splicing patterns may influence inclusion of these exons (7). 
+Exons 2 and 3 are non-coding exons whose inclusion in transcripts other than vif and vpr has no known function. We found that they were included in other messages infrequently, each in $\approximately{}7$--8\% of transcripts in the $\approximately{}2$ kb completely spliced class of transcripts and 5\% of partially spliced transcripts accumulating in T cells. This is consistent with previous measurements in the partially spliced class but much lower than has been estimated for completely spliced transcripts in HeLa cells, suggesting cell-type-specific splicing patterns may influence inclusion of these exons (7). 
 
 
-\subsection{A novel \approximately{}1 kb class of completely spliced transcripts}
-Primers placed near the \fivePrime{}- and \threePrime{}-ends of the \hivEight{} genome amplified a second class of completely spliced transcripts \approximately{}1 kb in length. In place of A7, these transcripts use a set of little studied splice acceptors located \approximately{}800 bp downstream within the \threePrime{}-TR. Two groups have previously observed splicing from D1 to acceptors A8, A8a and A8b in this region, yielding messages of this size class in patient samples; however, none of these could be translated to a protein of significant length (9,13). We determined the complete structure of 29 members of the 1-kb class (Figure 2 and Supplementary Table S5). The most abundant messages observed in this class use the novel acceptor A8c to define their terminal exon. For HIV89.6, acceptor A8c was used nearly as frequently as A7, which gives us the 2-kb class of transcripts (Supplementary Table S3), and this was supported by end point RT-PCR analysis (data not shown).
+\subsection{A novel $\approximately{}1$ kb class of completely spliced transcripts}
+Primers placed near the \fivePrime{}- and \threePrime{}-ends of the \hivEight{} genome amplified a second class of completely spliced transcripts $\approximately{}1$ kb in length. In place of A7, these transcripts use a set of little studied splice acceptors located $\approximately{}800$ bp downstream within the \threePrime{}-TR. Two groups have previously observed splicing from D1 to acceptors A8, A8a and A8b in this region, yielding messages of this size class in patient samples; however, none of these could be translated to a protein of significant length (9,13). We determined the complete structure of 29 members of the 1-kb class (Figure 2 and Supplementary Table S5). The most abundant messages observed in this class use the novel acceptor A8c to define their terminal exon. For HIV89.6, acceptor A8c was used nearly as frequently as A7, which gives us the 2-kb class of transcripts (Supplementary Table S3), and this was supported by end point RT-PCR analysis (data not shown).
 
 Acceptor A8c is not well conserved in HIV-1/SIVcpz (14\%), although it is conserved in clade G viruses ($>95$\%) and most HIV-2/SIVsmm genomes (86\%) (49). This is due to the poor conservation of an adenosine at the wobble base position of the 123rd codon (proline) of the Nef reading frame, which creates the AG dinucleotide generally required at splice acceptors. Since any base at this position would code for proline, there does not seem to be strong selection for a splice acceptor here. However, A8c is displaced from nearby well-conserved ($>90$\%) cryptic acceptors A8a and A8b by multiples of 3 bp (12 and 21 bp, respectively), so splicing to any of these three acceptors would create similar ORFs. All HIVs and SIVs maintain at least one of these three acceptors, suggesting possible function (49). We confirmed that the 1 kb transcripts using A8a, A8b and A8c were present in infected HOS and T cells by end point RT-PCR using additional primer pairs and by Sanger sequencing of cloned transcripts (Figure 3A and B; data not shown). 
 
@@ -90,7 +90,7 @@ The 1-kb transcript containing exons 1, 4 and 8c (1-4-8c, where exon 8c begins a
 \subsection{Temporal dynamics of transcript populations}
 To assess longitudinal variation, we investigated \hivEight{} transcript populations during the course of a single round of infection in HOS-CD4-CCR5 cells. A sensitive method for comparison among conditions involves quantifying utilization of six mutually exclusive splice acceptors A3, A4c, A4a, A4b, A5 and a novel acceptor just downstream of A5 termed A5a. Splicing at these acceptors determines the relative levels of messages encoding Tat and Env/Vpu in the partially spliced class and messages encoding Tat, Rev and Nef in the completely spliced class.
 
-We observed longitudinal changes in the levels of these messages in HOS cells over 12--48 h that were statistically significant ($p < 10^{-10}$; generalized linear model described in Supplementary Report S2). This pattern was especially evident in junctions involving donor 1 spliced to each of these acceptors (Figure 4A). Most dramatically, transcripts with splicing junctions between D1 and A3 (tat messages) increased with time ($p < 10^{-10}$), while D1\^{}A4b junctions (used in \textit{env}/\textit{vpu} or \textit{rev} messages) were used reciprocally less ($p < 10^-10}$). Such kinetic changes affecting specific transcripts both with and without the Rev-response element cannot be explained by the accumulation of Rev, and they may reflect differential transcript stability or HIV-induced alterations to the host splicing machinery. Temporal changes in HOS cells were confirmed using end point RT-PCR and analysis after electrophoresis on ethidium-stained gels (Figure 4B). 
+We observed longitudinal changes in the levels of these messages in HOS cells over 12--48 h that were statistically significant ($p < 10^{-10}$; generalized linear model described in Supplementary Report S2). This pattern was especially evident in junctions involving donor 1 spliced to each of these acceptors (Figure 4A). Most dramatically, transcripts with splicing junctions between D1 and A3 (tat messages) increased with time ($p < 10^{-10}$), while D1\^{}A4b junctions (used in \textit{env}/\textit{vpu} or \textit{rev} messages) were used reciprocally less ($p < 10^{-10}$). Such kinetic changes affecting specific transcripts both with and without the Rev-response element cannot be explained by the accumulation of Rev, and they may reflect differential transcript stability or HIV-induced alterations to the host splicing machinery. Temporal changes in HOS cells were confirmed using end point RT-PCR and analysis after electrophoresis on ethidium-stained gels (Figure 4B). 
 
 \subsection{Cell-type-specific splicing patterns}
 We also compared splicing between T cells and HOS cells and found significant cell type differences ($p < 10^{-10}$). For example, while transcripts with D1\^{}A5 junctions were dominant in both cell types, messages using the D1\^{}A4c splice junction (encoding Env/Vpu or Rev) made up the bulk of the remaining transcripts in T cells but were a minor species in HOS-CD4-CCR5 cells. Likewise, Tat messages (using A3), which were quite abundant in HOS cells at all time points, contributed relatively little to populations of transcripts in primary T cells harvested at 48 hpi (Figure 4A). We also used end point PCR and analysis on ethidium-bromide-stained gels to confirm that the relative ratios of transcripts containing junctions to A3, A4a, A4b and A4c were different in HOS and T cells (Figure 4B).
@@ -105,7 +105,7 @@ Use of single-molecule enrichment and long-read single-molecule sequencing has m
 
 Using these methods, we have detected significant variations between HIV message populations generated in T cells from different human donors. The differences were modest compared to those observed between cell types or time points, perhaps not surprisingly since any human polymorphisms strongly affecting mRNA processing might interfere with normal gene expression. However, because tight calibration of message levels is important to HIV-1, the observed differences in message ratios might affect HIV-1 acquisition or disease progression. The variation in observed transcripts could also be affected by different kinetics of infection in T cells from the different donors. In either case, these data suggest that human polymorphisms may exist that affect HIV-1 message populations in infected individuals, providing a new candidate mechanism connecting human genetic variation with measures of HIV disease.
 
-Sequences from the 89.6 viral strain revealed a class of small (\approximately{}1 kb) completely spliced transcripts, most contributed by splicing to a new poorly conserved acceptor A8c. These encoded two new proteins, one of which had Tat activity, and we showed that another, a Rev-Nef fusion termed Ref, could be detected in cells. \hivEight{} is a particularly cytotoxic virus isolated from the CSF of a patient, and it forms unusually large syncitia in macrophages (32). The abundance of 1-kb transcripts produced by this virus provides a possible explanation for its unique properties. In addition to the novel acceptor A8c, we have also identified 3 putative novel splice donors and 11 putative novel acceptors, which require further studied to clarify possible functions.
+Sequences from the 89.6 viral strain revealed a class of small ($\approximately{}1$ kb) completely spliced transcripts, most contributed by splicing to a new poorly conserved acceptor A8c. These encoded two new proteins, one of which had Tat activity, and we showed that another, a Rev-Nef fusion termed Ref, could be detected in cells. \hivEight{} is a particularly cytotoxic virus isolated from the CSF of a patient, and it forms unusually large syncitia in macrophages (32). The abundance of 1-kb transcripts produced by this virus provides a possible explanation for its unique properties. In addition to the novel acceptor A8c, we have also identified 3 putative novel splice donors and 11 putative novel acceptors, which require further studied to clarify possible functions.
 
 The wealth of new messages found here in \hivEight{} and in other HIV-1 isolates suggests there may be ongoing evolution of novel splice sites and new ORFs. Because splice acceptors in HIV-1 are weak (14), mutations creating sequences that even slightly resemble the \threePrime{} splice site consensus may be occasionally recruited as novel acceptors, creating new mRNAs. In fact, new splice signals may evolve with relative ease---it has been estimated that reasonable matches to the consensus for splice donors, acceptors and branch-point sites occur within random sequence every 290, 490 and 24 bp, respectively (50), though sequence substitutions in HIV are usually also constrained by overlapping viral coding regions. We and others have observed appearance of novel exons within the major HIV-1 introns (8,10,11). Such long stretches of RNA relatively devoid of competing splice sites may be particularly poised to evolve new signals. On the other hand, most of the putative novel splice acceptors we observed clustered near previously identified acceptors in HIV-1, suggesting that conserved cis-acting splicing signals may recruit factors that act promiscuously on new nearby sequences. Clusters of splice sites might also provide redundancies that protect vital messages, as suggested previously (51,52). Frequent evolution of new splice sites may allow viruses to test out new combinations of exons, potentially yielding new RNAs and proteins, like those reported here. However, such novelty must compete with immune constraints---unstable novel polypeptides like Ref can be targeted to the proteosome and presented on MHC molecules as new epitopes for immune recognition.
 
